--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p>Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
-    <p>Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
-    <p>Number 5 - I'm a class!</p>
+    <p class="Odd-number">Number 1 - I'm a class!</p>
+    <div id="second-element">Number 2 - I'm one ID.</div>
+    <p class="Odd-number third-element">Number 3 - I'm a class, but cooler!</p>
+    <div id="fourth-element">Number 4 - I'm another ID.</div>
+    <p class="Odd-number">Number 5 - I'm a class!</p>
+    </p>
   </body>
 </html>
